wasm-pack.log
Sep 20 19:04:23.652 ERRO Compilation of your program failed. stderr:

   Compiling proc-macro2 v0.4.19
   Compiling unicode-xid v0.1.0
   Compiling version_check v0.1.4
   Compiling ryu v0.2.6
   Compiling serde v1.0.79
   Compiling wasm-bindgen-shared v0.2.21
   Compiling itoa v0.4.3
   Compiling cfg-if v0.1.5
   Compiling wasm-bindgen v0.2.21
   Compiling log v0.4.5
   Compiling lazy_static v1.1.0
   Compiling quote v0.6.8
   Compiling syn v0.15.4
   Compiling serde_json v1.0.28
   Compiling serde_derive v1.0.79
   Compiling wasm-bindgen-backend v0.2.21
   Compiling wasm-bindgen-macro-support v0.2.21
   Compiling wasm-bindgen-macro v0.2.21
   Compiling wasm-game-of-life v0.1.0 (file:///Users/psbrandt/workspace/wasm-tutorial/wasm-game-of-life)
warning: function is never used: `set_panic_hook`
  --> src/utils.rs:11:9
   |
11 |         pub fn set_panic_hook() {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: #[warn(dead_code)] on by default

error: linking with `rust-lld` failed: signal: 6
  |
  = note: "rust-lld" "-flavor" "wasm" "-L" "/Users/psbrandt/.rustup/toolchains/nightly-x86_64-apple-darwin/lib/rustlib/wasm32-unknown-unknown/lib" "/Users/psbrandt/workspace/wasm-tutorial/wasm-game-of-life/target/wasm32-unknown-unknown/release/deps/wasm_game_of_life.wasm_game_of_life.59gcvxac-cgu.0.rcgu.o" "/Users/psbrandt/workspace/wasm-tutorial/wasm-game-of-life/target/wasm32-unknown-unknown/release/deps/wasm_game_of_life.wasm_game_of_life.59gcvxac-cgu.1.rcgu.o" "/Users/psbrandt/workspace/wasm-tutorial/wasm-game-of-life/target/wasm32-unknown-unknown/release/deps/wasm_game_of_life.wasm_game_of_life.59gcvxac-cgu.2.rcgu.o" "-o" "/Users/psbrandt/workspace/wasm-tutorial/wasm-game-of-life/target/wasm32-unknown-unknown/release/deps/wasm_game_of_life.wasm" "/Users/psbrandt/workspace/wasm-tutorial/wasm-game-of-life/target/wasm32-unknown-unknown/release/deps/wasm_game_of_life.bxpq0uzydj2zf4e.rcgu.o" "--gc-sections" "-O3" "-L" "/Users/psbrandt/workspace/wasm-tutorial/wasm-game-of-life/target/wasm32-unknown-unknown/release/deps" "-L" "/Users/psbrandt/workspace/wasm-tutorial/wasm-game-of-life/target/release/deps" "-L" "/Users/psbrandt/.rustup/toolchains/nightly-x86_64-apple-darwin/lib/rustlib/wasm32-unknown-unknown/lib" "/Users/psbrandt/workspace/wasm-tutorial/wasm-game-of-life/target/wasm32-unknown-unknown/release/deps/libwasm_bindgen-925773ab1aa39959.rlib" "/Users/psbrandt/workspace/wasm-tutorial/wasm-game-of-life/target/wasm32-unknown-unknown/release/deps/libcfg_if-b3b39be8b0c09b96.rlib" "/Users/psbrandt/.rustup/toolchains/nightly-x86_64-apple-darwin/lib/rustlib/wasm32-unknown-unknown/lib/libstd-0daf2a67587463d1.rlib" "/Users/psbrandt/.rustup/toolchains/nightly-x86_64-apple-darwin/lib/rustlib/wasm32-unknown-unknown/lib/libpanic_abort-95ef4ec6a468a7c4.rlib" "/Users/psbrandt/.rustup/toolchains/nightly-x86_64-apple-darwin/lib/rustlib/wasm32-unknown-unknown/lib/libunwind-99384df64c2c631c.rlib" "/Users/psbrandt/.rustup/toolchains/nightly-x86_64-apple-darwin/lib/rustlib/wasm32-unknown-unknown/lib/liblibc-3588fa8a2cf7f341.rlib" "/Users/psbrandt/.rustup/toolchains/nightly-x86_64-apple-darwin/lib/rustlib/wasm32-unknown-unknown/lib/liballoc_system-69de4acc2694728e.rlib" "/Users/psbrandt/.rustup/toolchains/nightly-x86_64-apple-darwin/lib/rustlib/wasm32-unknown-unknown/lib/libdlmalloc-88216fe7b4a345a9.rlib" "/Users/psbrandt/.rustup/toolchains/nightly-x86_64-apple-darwin/lib/rustlib/wasm32-unknown-unknown/lib/liballoc-de52c8a296d65ffc.rlib" "/Users/psbrandt/.rustup/toolchains/nightly-x86_64-apple-darwin/lib/rustlib/wasm32-unknown-unknown/lib/libcore-7dd9b1b4fecacf0d.rlib" "/Users/psbrandt/.rustup/toolchains/nightly-x86_64-apple-darwin/lib/rustlib/wasm32-unknown-unknown/lib/libcompiler_builtins-d58460cd70aeca06.rlib" "--no-threads" "-z" "stack-size=1048576" "--stack-first" "--allow-undefined" "--no-entry" "--export-table"
  = note: dyld: Library not loaded: @rpath/libLLVM.dylib
            Referenced from: /Users/psbrandt/.rustup/toolchains/nightly-x86_64-apple-darwin/lib/rustlib/x86_64-apple-darwin/bin/rust-lld
            Reason: image not found
          

error: aborting due to previous error

error: Could not compile `wasm-game-of-life`.

To learn more, run the command again with --verbose.

Oct 06 15:26:42.722 ERRO Compilation of your program failed. stderr:

   Compiling wasm-game-of-life v0.1.0 (/Users/psbrandt/workspace/wasm-tutorial/wasm-game-of-life)
error[E0308]: mismatched types
  --> src/lib.rs:15:9
   |
15 |   alert(format!("Hello, {}!", name));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |         |
   |         expected &str, found struct `std::string::String`
   |         help: consider borrowing here: `&format!("Hello, {}!", name)`
   |
   = note: expected type `&str`
              found type `std::string::String`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
error: Could not compile `wasm-game-of-life`.

To learn more, run the command again with --verbose.

Oct 06 17:01:55.126 ERRO Compilation of your program failed. stderr:

   Compiling wasm-game-of-life v0.1.0 (/Users/psbrandt/workspace/wasm-tutorial/wasm-game-of-life)
error[E0423]: expected value, found enum `Cell`
  --> src/lib.rs:96:11
   |
96 |           Cell: Dead
   |           ^^^^
   |
   = note: did you mean to use one of the following variants?
           - `Cell::Alive`
           - `Cell::Dead`

error[E0412]: cannot find type `Dead` in this scope
  --> src/lib.rs:96:17
   |
96 |           Cell: Dead
   |                 ^^^^
   |                 |
   |                 not found in this scope
   |                 expecting a type here because of type ascription
   |                 help: you can try using the variant's enum: `Cell`

error[E0658]: type ascription is experimental (see issue #23416)
  --> src/lib.rs:96:11
   |
96 |           Cell: Dead
   |           ^^^^^^^^^^
   |
   = help: add #![feature(type_ascription)] to the crate attributes to enable

error: aborting due to 3 previous errors

Some errors occurred: E0412, E0423, E0658.
For more information about an error, try `rustc --explain E0412`.
error: Could not compile `wasm-game-of-life`.

To learn more, run the command again with --verbose.

